# Meistar-KG

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
backend/agents/: ingestion.py
backend/api/: main.py
backend/config/: __init__.py  settings.py
backend/models/: schemas.py
backend/pipeline/: cost_tracker.py  formula_utils.py  java_env.py  llm_client.py  pdf_fetch.py  pdf_parser.py  quality.py  section_splitter.py  token_counter.py  vision_fallback.py
backend/tests/: test_api.py  test_formula_utils.py  test_ingestion.py  test_java_env.py  test_llm_client.py  test_nber_w34814.py  test_pdf_fetch.py  test_pdf_parser.py  test_quality.py  test_section_splitter.py  test_token_counter.py
