[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meistar-kg"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "polars>=0.20",
    "httpx>=0.27",
    "opendataloader-pdf>=2.4",
    "markdownify>=0.13",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "asyncio-throttle>=1.0",
    "tiktoken>=0.7",
    "pymupdf>=1.24",
    "pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx",  # for FastAPI test client
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
